--- a/work/glitch-room.html
+++ b/work/glitch-room.html
@@ -74,10 +74,11 @@
 
 <div class="grid1">
   <img src="/img/glitch-room/display.jpg" alt="GLITCH ROOM WEBSITE 故障房间网页 · NORA ZHAO 赵子娴">
+  <img src="/img/glitch-room/iphone.jpg" alt="GLITCH ROOM WEBSITE 故障房间网页 · NORA ZHAO 赵子娴">
 </div>
 
-<h6 class="en imgDescription">△ Homepage and model customisation page from glitchroom.com.</h6>
-<h6 class="zh imgDescription">△ 故障房间网站首页与模型自定义页面。</h6>
+<h6 class="en imgDescription">△ Home, model customisation and VR page from glitchroom.com.</h6>
+<h6 class="zh imgDescription">△ 故障房间网站首页、模型自定义及VR页面。</h6>
 
 <div class="grid1">
   <img src="/img/glitch-room/1.jpg" alt="GLITCH ROOM GENERATED PATTERN 故障房间生成图纹 · NORA ZHAO 赵子娴">
