--- a/work/glitch-room.html
+++ b/work/glitch-room.html
@@ -18,10 +18,12 @@
 
 <main>
 <p class="en indent headerText">
-  An interactive VR site that generates customised glitching patterns.
+  <!-- An interactive VR site that generates customised glitching patterns. -->
+  Exploring generative art in virtual reality
 </p>
 <p class="zh indent headerText">
-  可生成自定义故障图样的交互式虚拟现实网站。
+  <!-- 可生成自定义故障图样的交互式虚拟现实网站。 -->
+  在虚拟现实中探索生成式艺术。
 </p>
 
 <h1 class="en">Glitch Room</h1>
