--- a/work/glitch-room.html
+++ b/work/glitch-room.html
@@ -19,7 +19,7 @@
 <main>
 <p class="en indent headerText">
   <!-- An interactive VR site that generates customised glitching patterns. -->
-  Exploring generative art in virtual reality
+  Exploring generative art in virtual reality.
 </p>
 <p class="zh indent headerText">
   <!-- 可生成自定义故障图样的交互式虚拟现实网站。 -->
