--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -39,7 +39,7 @@
   <br>
   If you are interested, please send me an email of inquiry about any possible commission or collaboration.
   <br>
-  Email: norazhaodesign@gmail.com
+  Email: hi@norazhao.com
   <br style="margin-bottom: 0;">
   Instagram: <a href="https://www.instagram.com/norazhaodesign/" target="_blank">norazhaodesign</a>
   ·
@@ -55,7 +55,7 @@
   <br>
   微信账号：norazhaodesign
   <br style="margin-bottom: 0;">
-  电子邮箱：norazhaodesign@gmail.com
+  电子邮箱：hi@norazhao.com
 </p>
 
 <div class="pageDivider"></div>
