--- a/work/angel-water.html
+++ b/work/angel-water.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>PEACEBIRD 太平鸟 · NORA ZHAO 赵子娴</title>
+<title>ANGEL WATER 安吉尔 · NORA ZHAO 赵子娴</title>
 <link rel="stylesheet" type="text/css" href="/style.css">
 <script src="/js/jquery.min.js"></script>
 </head>
@@ -18,41 +18,41 @@
 
 <main>
 <p class="en indent headerText">
-  A refreshed visual identity for one of the best selling Chinese fashion brands.
+  A refreshed brand identity sysytem for a leading water purification brand in China.
 <p>
 <p class="zh indent headerText">
-  太平鸟服饰的品牌视觉识别更新。
+  高端净水品牌安吉尔的视觉识别系统更新。
 <p>
 
-<h1 class="en">Peacebird</h1>
-<h1 class="zh">太平鸟</h1>
+<h1 class="en">Angel Water</h1>
+<h1 class="zh">安吉尔</h1>
 
 <div class="grid1">
-  <img src="/img/peacebird/cover.jpg" alt="PEACEBIRD LOGO 太平鸟品牌标识 · NORA ZHAO 赵子娴">
+  <img src="/img/angel/cover.jpg" alt="ANGEL LOGO 安吉尔品牌标识 · NORA ZHAO 赵子娴">
 </div>
 </main>
 
 <p class="en indent bodyText">
-  Client: Peacebird
+  Client: Angel Water
   <br class="listBreak">
-  Location: Ningbo, Zhejiang, China
+  Location: Shenzhen, Guangdong, China
   <br class="listBreak">
-  Scope: visual identity system, brand guidelines
+  Scope: visual audit and analysis, brand identity system
   <br class="listBreak">
-  Year: 2019
+  Year: 2020
   <br class="listBreak">
   Type: collaborative project
   <br class="dividerLine">
   While maintaining the sans-serif approach and its unique visual characteristics, the new logotype maximises the simplicity of form to achive better legibility throughout applications of various sizes (especially on digital screens).
 </p>
 <p class="zh indent bodyText">
-  客户：太平鸟
+  客户：安吉尔
   <br class="listBreak">
-  地点：浙江宁波
+  地点：广东深圳
   <br class="listBreak">
-  范畴：视觉识别系统、品牌指导手册
+  范畴：视觉审查与分析、品牌识别系统
   <br class="listBreak">
-  时间：2019年
+  时间：2020年
   <br class="listBreak">
   类型：团队项目
   <br class="dividerLine">
