--- a/work/byton.html
+++ b/work/byton.html
@@ -35,7 +35,7 @@
 <p class="en indent bodyText">
   Client: Byton
   <br class="listBreak">
-  Location: Nanjing, China
+  Location: Nanjing, Jiangsu, China
   <br class="listBreak">
   Scope: visual identity system, brand guidelines
   <br class="listBreak">
@@ -51,7 +51,7 @@
 <p class="zh indent bodyText">
   客户：拜腾
   <br class="listBreak">
-  地点：中国南京
+  地点：江苏南京
   <br class="listBreak">
   范畴：视觉识别系统、品牌指导手册
   <br class="listBreak">
