add project lazzen

--- a/work/peacebird.html
+++ b/work/peacebird.html
@@ -41,7 +41,7 @@
   <br class="listBreak">
   Year: 2019
   <br class="listBreak">
-  Type: collaborative project
+  Type: team project
   <br class="dividerLine">
   While maintaining the sans-serif approach and its unique visual characteristics, the new logotype maximises the simplicity of form to achive better legibility throughout applications of various sizes (especially on digital screens).
 </p>
