--- a/work/rtw.html
+++ b/work/rtw.html
@@ -45,7 +45,7 @@
   <br class="listBreak">
   Year: 2019-2020
   <br class="listBreak">
-  Type: collaborative project
+  Type: team project
   <br class="dividerLine">
   RTW is an apperal brand which strives to deliver better quality products at an honest price, by considering what truely matters to the customers from materials and manufacturing to the sales channels.
   <br>
