--- a/work/shuinfo.html
+++ b/work/shuinfo.html
@@ -41,7 +41,7 @@
   <br class="listBreak">
   Year: 2021
   <br class="listBreak">
-  Type: collaborative project
+  Type: team project
   <br class="dividerLine">
   SHUINFO is a company which endeavours to deliver digital transformation services, products and solutions for business in the industries including food and beverages, retail, real estate, automobiles and finance.
 </p>
