--- a/work/lazzen.html
+++ b/work/lazzen.html
@@ -28,7 +28,7 @@
 <h1 class="zh">良信智能</h1>
 
 <div class="grid1">
-  <img src="/img/lazzen/poster1.jpg" alt="LAZZEN POSTER 良信海报 · NORA ZHAO 赵子娴">
+  <img src="/img/lazzen/video1.gif" alt="LAZZEN 良信智能 · NORA ZHAO 赵子娴">
 </div>
 </main>
 
@@ -62,12 +62,23 @@
 <div class="grid1">
   <img src="/img/lazzen/board1.jpg" alt="LAZZEN BOARD 良信控制面板 · NORA ZHAO 赵子娴">
   <img src="/img/lazzen/board2.jpg" alt="LAZZEN BOARD 良信控制面板 · NORA ZHAO 赵子娴">
+</div>
+<div class="grid2">
   <img src="/img/lazzen/box1.jpg" alt="LAZZEN PACKAGING 良信包装 · NORA ZHAO 赵子娴">
   <img src="/img/lazzen/box2.jpg" alt="LAZZEN PACKAGING 良信包装 · NORA ZHAO 赵子娴">
-  <img src="/img/lazzen/box3.jpg" alt="LAZZEN PACKAGING 良信包装 · NORA ZHAO 赵子娴">
+</div>
+<div class="grid1">
   <img src="/img/lazzen/box4.jpg" alt="LAZZEN PACKAGING 良信包装 · NORA ZHAO 赵子娴">
-  <img src="/img/lazzen/poster2.jpg" alt="LAZZEN POSTER 良信海报 · NORA ZHAO 赵子娴">
-  <img src="/img/lazzen/poster3.jpg" alt="LAZZEN POSTER 良信海报 · NORA ZHAO 赵子娴">
+  <img src="/img/lazzen/box3.jpg" alt="LAZZEN PACKAGING 良信包装 · NORA ZHAO 赵子娴">
+  <img src="/img/lazzen/poster1.jpg" alt="LAZZEN POSTER 良信海报 · NORA ZHAO 赵子娴">
+  <img src="/img/lazzen/billboard.jpg" alt="LAZZEN POSTER 良信海报 · NORA ZHAO 赵子娴">
+</div>
+<div class="grid2">
+  <img src="/img/lazzen/video2.gif" alt="LAZZEN POSTER 良信动态海报 · NORA ZHAO 赵子娴">
+  <img src="/img/lazzen/video3.gif" alt="LAZZEN POSTER 良信动态海报 · NORA ZHAO 赵子娴">
+</div>
+<div class="grid1">
+  <img src="/img/lazzen/video4.gif" alt="LAZZEN POSTER 良信动态海报 · NORA ZHAO 赵子娴">
 </div>
 
 <div class="pageDivider"></div>
