--- a/work/rtw.html
+++ b/work/rtw.html
@@ -28,11 +28,7 @@
 <h1 class="zh">RTW</h1>
 
 <div class="grid1">
-  <video autoplay loop
-    src="/img/rtw/cover.mov"
-    style="width: 100%;">
-    Your browser does not support the video tag.
-  </video>
+  <img src="/img/rtw/cover.gif" alt="RTW VIDEO RTW宣传视频 · NORA ZHAO 赵子娴">
 </div>
 </main>
 
