--- a/work/lazzen.html
+++ b/work/lazzen.html
@@ -60,16 +60,17 @@
 </p>
 
 <div class="grid1">
-  <img src="/img/lazzen/board1.jpg" alt="LAZZEN BOARD 良信控制面板 · NORA ZHAO 赵子娴">
-  <img src="/img/lazzen/board2.jpg" alt="LAZZEN BOARD 良信控制面板 · NORA ZHAO 赵子娴">
+  <img src="/img/lazzen/box4.jpg" alt="LAZZEN PACKAGING 良信包装 · NORA ZHAO 赵子娴">
 </div>
 <div class="grid2">
   <img src="/img/lazzen/box1.jpg" alt="LAZZEN PACKAGING 良信包装 · NORA ZHAO 赵子娴">
   <img src="/img/lazzen/box2.jpg" alt="LAZZEN PACKAGING 良信包装 · NORA ZHAO 赵子娴">
 </div>
 <div class="grid1">
-  <img src="/img/lazzen/box4.jpg" alt="LAZZEN PACKAGING 良信包装 · NORA ZHAO 赵子娴">
-  <img src="/img/lazzen/box3.jpg" alt="LAZZEN PACKAGING 良信包装 · NORA ZHAO 赵子娴">
+  <img src="/img/lazzen/board1.jpg" alt="LAZZEN BOARD 良信控制面板 · NORA ZHAO 赵子娴">
+  <img src="/img/lazzen/board2.jpg" alt="LAZZEN BOARD 良信控制面板 · NORA ZHAO 赵子娴">
+</div>
+<div class="grid1">
   <img src="/img/lazzen/poster1.jpg" alt="LAZZEN POSTER 良信海报 · NORA ZHAO 赵子娴">
   <img src="/img/lazzen/billboard.jpg" alt="LAZZEN POSTER 良信海报 · NORA ZHAO 赵子娴">
 </div>
