--- a/work/lazzen.html
+++ b/work/lazzen.html
@@ -43,7 +43,9 @@
   <br class="listBreak">
   Type: team project
   <br class="dividerLine">
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam consectetur, erat nec feugiat vestibulum, neque augue viverra lorem, ut pellentesque lorem enim et ligula. Suspendisse mollis, nisi a malesuada ornare, neque dui viverra metus, sed pulvinar felis purus at purus.
+   A fantastical world created for Lazzen's customers. One where the seemingly impossible becomes possible. One that speaks of the aspiration of the product rather than the function. One that puts Lazzen ‘life magic’ firmly in the lifestyle sector and sets it apart from the competition.
+  <br>
+  Where There’s Electricity, there’s Lazzen.
 </p>
 <p class="zh indent bodyText">
   客户：良信智能
@@ -56,13 +58,15 @@
   <br class="listBreak">
   类型：团队项目
   <br class="dividerLine">
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam consectetur, erat nec feugiat vestibulum, neque augue viverra lorem, ut pellentesque lorem enim et ligula. Suspendisse mollis, nisi a malesuada ornare, neque dui viverra metus, sed pulvinar felis purus at purus.
+  我们为良信的客户创造出一个奇幻的魔法世界。
+  <br>
+  在这个世界里，看似不可能的事情能够得以实现；在这个世界里，我们更加注重产品所传达着的态度与愿景，而非仅仅其所具备的功能性；在这个世界里，我们用“生活魔法”将良信品牌置于生活方式领域，从而使其在竞争对手中脱颖而出。
 </p>
 
 <div class="grid1">
   <img src="/img/lazzen/box4.jpg" alt="LAZZEN PACKAGING 良信包装 · NORA ZHAO 赵子娴">
 </div>
-<div class="grid2">
+<div class="grid2 gridxto1">
   <img src="/img/lazzen/box1.jpg" alt="LAZZEN PACKAGING 良信包装 · NORA ZHAO 赵子娴">
   <img src="/img/lazzen/box2.jpg" alt="LAZZEN PACKAGING 良信包装 · NORA ZHAO 赵子娴">
 </div>
