--- a/work/byton.html
+++ b/work/byton.html
@@ -21,7 +21,7 @@
   Tweaks on the visual assets of a startup electric car company to inject vibrance.
 <p>
 <p class="zh indent headerText">
-  新兴电动汽车品牌的视觉资产年轻化调整。
+  新兴电动汽车品牌拜腾的视觉资产年轻化调整。
 <p>
 
 <h1 class="en">Byton</h1>
