--- a/work/lazzen.html
+++ b/work/lazzen.html
@@ -18,10 +18,10 @@
 
 <main>
 <p class="en indent headerText">
-  A magical world, built for you.
+  Visual identity for a 2C sub-brand which offers smart home control panels.
 <p>
 <p class="zh indent headerText">
-  为您打造的魔法世界。
+  基于面向B端的母品牌，构建子品牌良信智能全屋协同控制面板面向C端消费者的视觉形象。
 <p>
 
 <h1 class="en">Lazzen</h1>
@@ -60,7 +60,7 @@
   <br class="dividerLine">
   我们为良信的客户创造出一个奇幻的魔法世界。
   <br>
-  在这个世界里，看似不可能的事情能够得以实现；在这个世界里，我们更加注重产品所传达着的态度与愿景，而非仅仅其所具备的功能性；在这个世界里，我们用“生活魔法”将良信品牌置于生活方式领域，从而使其在竞争对手中脱颖而出。
+  在这个世界里，看似不可能的事情能够得以实现；在这个世界里，我们更加注重产品所传达着的态度与愿景，而非仅仅其所具备的功能性；在这个世界里，我们用“生活魔法”将良信的品牌置于生活方式领域，从而使其在竞争对手中脱颖而出。
 </p>
 
 <div class="grid1">
