--- a/work/rtw.html
+++ b/work/rtw.html
@@ -21,7 +21,7 @@
   Brand identity for an apparel company that provides quality products with a reasonable price.
 </p>
 <p class="zh indent headerText">
-  为一家以提供大众可负担价位的高品质服装产品为宗旨的品牌设计视觉识别系统。
+  高品质且大众可负担价位的服装产品品牌RTW的视觉识别系统设计。
 </p>
 
 <h1 class="en">RTW</h1>
