--- a/work/lazzen.html
+++ b/work/lazzen.html
@@ -18,7 +18,7 @@
 
 <main>
 <p class="en indent headerText">
-  Visual identity for a 2C sub-brand which offers smart home control panels.
+  Visual identity for a 2C sub-brand which offers smart-home control panels.
 <p>
 <p class="zh indent headerText">
   基于面向B端的母品牌，构建子品牌良信智能全屋协同控制面板面向C端消费者的视觉形象。
@@ -45,7 +45,7 @@
   <br class="dividerLine">
    A fantastical world created for Lazzen's customers. One where the seemingly impossible becomes possible. One that speaks of the aspiration of the product rather than the function. One that puts Lazzen ‘life magic’ firmly in the lifestyle sector and sets it apart from the competition.
   <br>
-  Where There’s Electricity, there’s Lazzen.
+  Where there’s electricity, there’s Lazzen.
 </p>
 <p class="zh indent bodyText">
   客户：良信智能
