--- a/work/lazzen.html
+++ b/work/lazzen.html
@@ -18,7 +18,7 @@
 
 <main>
 <p class="en indent headerText">
-  Visual identity for a 2C sub-brand which offers smart-home control panels.
+  Visual identity for a 2C sub-brand which offers smarthome control panels.
 <p>
 <p class="zh indent headerText">
   基于面向B端的母品牌，构建子品牌良信智能全屋协同控制面板面向C端消费者的视觉形象。
