--- a/work/lazzen.html
+++ b/work/lazzen.html
@@ -64,26 +64,27 @@
 </p>
 
 <div class="grid1">
-  <img src="/img/lazzen/box4.jpg" alt="LAZZEN PACKAGING 良信包装 · NORA ZHAO 赵子娴">
-</div>
-<div class="grid2 gridxto1">
-  <img src="/img/lazzen/box1.jpg" alt="LAZZEN PACKAGING 良信包装 · NORA ZHAO 赵子娴">
-  <img src="/img/lazzen/box2.jpg" alt="LAZZEN PACKAGING 良信包装 · NORA ZHAO 赵子娴">
-</div>
-<div class="grid1">
-  <img src="/img/lazzen/board1.jpg" alt="LAZZEN BOARD 良信控制面板 · NORA ZHAO 赵子娴">
-  <img src="/img/lazzen/board2.jpg" alt="LAZZEN BOARD 良信控制面板 · NORA ZHAO 赵子娴">
-</div>
-<div class="grid1">
-  <img src="/img/lazzen/poster1.jpg" alt="LAZZEN POSTER 良信海报 · NORA ZHAO 赵子娴">
-  <img src="/img/lazzen/billboard.jpg" alt="LAZZEN POSTER 良信海报 · NORA ZHAO 赵子娴">
+  <img src="/img/lazzen/box4.jpg" alt="LAZZEN PACKAGING DESIGN 良信包装设计 · NORA ZHAO 赵子娴">
 </div>
 <div class="grid2">
-  <img src="/img/lazzen/video2.gif" alt="LAZZEN POSTER 良信动态海报 · NORA ZHAO 赵子娴">
-  <img src="/img/lazzen/video3.gif" alt="LAZZEN POSTER 良信动态海报 · NORA ZHAO 赵子娴">
+  <img src="/img/lazzen/box1.jpg" alt="LAZZEN PACKAGING DESIGN 良信包装设计 · NORA ZHAO 赵子娴">
+  <img src="/img/lazzen/box2.jpg" alt="LAZZEN PACKAGING DESIGN 良信包装设计 · NORA ZHAO 赵子娴">
 </div>
 <div class="grid1">
-  <img src="/img/lazzen/video4.gif" alt="LAZZEN POSTER 良信动态海报 · NORA ZHAO 赵子娴">
+  <img src="/img/lazzen/laptop.jpg" alt="LAZZEN WEBSITE DESIGN 良信网页设计 · NORA ZHAO 赵子娴">
+  <img src="/img/lazzen/board1.jpg" alt="LAZZEN CONTROL PANEL DESIGN 良信控制面板设计 · NORA ZHAO 赵子娴">
+  <img src="/img/lazzen/board2.jpg" alt="LAZZEN CONTROL PANEL DESIGN 良信控制面板设计 · NORA ZHAO 赵子娴">
+</div>
+<div class="grid1">
+  <img src="/img/lazzen/poster1.jpg" alt="LAZZEN POSTER DESIGN 良信海报设计 · NORA ZHAO 赵子娴">
+  <img src="/img/lazzen/billboard.jpg" alt="LAZZEN POSTER DESIGN 良信海报设计 · NORA ZHAO 赵子娴">
+</div>
+<div class="grid2">
+  <img src="/img/lazzen/video2.gif" alt="LAZZEN POSTER DESIGN 良信动态海报设计 · NORA ZHAO 赵子娴">
+  <img src="/img/lazzen/video3.gif" alt="LAZZEN POSTER DESIGN 良信动态海报设计 · NORA ZHAO 赵子娴">
+</div>
+<div class="grid1">
+  <img src="/img/lazzen/video4.gif" alt="LAZZEN POSTER DESIGN 良信动态海报设计 · NORA ZHAO 赵子娴">
 </div>
 
 <div class="pageDivider"></div>
