--- a/work/lazzen.html
+++ b/work/lazzen.html
@@ -77,7 +77,8 @@
 </div>
 <div class="grid1">
   <img src="/img/lazzen/poster1.jpg" alt="LAZZEN POSTER DESIGN 良信海报设计 · NORA ZHAO 赵子娴">
-  <img src="/img/lazzen/billboard.jpg" alt="LAZZEN POSTER DESIGN 良信海报设计 · NORA ZHAO 赵子娴">
+  <img src="/img/lazzen/billboard1.jpg" alt="LAZZEN POSTER DESIGN 良信海报设计 · NORA ZHAO 赵子娴">
+  <img src="/img/lazzen/billboard2.jpg" alt="LAZZEN POSTER DESIGN 良信海报设计 · NORA ZHAO 赵子娴">
 </div>
 <div class="grid2">
   <img src="/img/lazzen/video2.gif" alt="LAZZEN POSTER DESIGN 良信动态海报设计 · NORA ZHAO 赵子娴">
