--- a/work/mini-sites.html
+++ b/work/mini-sites.html
@@ -55,6 +55,18 @@
 <div class="iframeWrapper iframe60 iframexto100">
   <iframe src="/page/gradient-arc.html"></iframe>
 </div>
+<div class="grid5 gridxto3" style="grid-gap: 0;">
+  <img src="/img/gradient-arc/s1.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
+  <img src="/img/gradient-arc/s4.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
+  <img src="/img/gradient-arc/s6.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
+  <img src="/img/gradient-arc/s7.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
+  <img src="/img/gradient-arc/s9.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
+  <img src="/img/gradient-arc/s10.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
+  <img src="/img/gradient-arc/s11.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
+  <img src="/img/gradient-arc/s13.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
+  <img src="/img/gradient-arc/s14.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
+  <img class="hideMobile" src="/img/gradient-arc/s17.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
+</div>
 
 <h2 class="en indent">Colour Cut</h2>
 <h2 class="zh indent">色彩切</h2>
