--- a/work/mini-sites.html
+++ b/work/mini-sites.html
@@ -32,6 +32,7 @@
 </div>
 </main>
 
+<!-- -------------------------------------------------------------------- -->
 <h2 class="en indent">Pattern Card</h2>
 <h2 class="zh indent">图纹卡片</h2>
 <p class="en indent bodyText">
@@ -40,10 +41,14 @@
 <p class="zh indent bodyText">
   请点击<a href="/page/pattern-card.html" target="_blank">此处</a>以跳转到该页面。
 </p>
+
 <div class="iframeWrapper iframe60 iframexto100">
   <iframe src="/page/pattern-card.html"></iframe>
 </div>
+<h6 class="en imgDescription">△ Upon each refresh, the webpage fetches random new images on display.</h6>
+<h6 class="zh imgDescription">△ 该网页在每次刷新时会随机抽取并排列新的图纹图片。</h6>
 
+<!-- -------------------------------------------------------------------- -->
 <h2 class="en indent">Gradient Arc</h2>
 <h2 class="zh indent">弧形渐变</h2>
 <p class="en indent bodyText">
@@ -52,9 +57,21 @@
 <p class="zh indent bodyText">
   请点击<a href="/page/gradient-arc.html" target="_blank">此处</a>以跳转到该页面。
 </p>
+
 <div class="iframeWrapper iframe60 iframexto100">
   <iframe src="/page/gradient-arc.html"></iframe>
 </div>
+<h6 class="en imgDescription">△ Generative webpage (live).</h6>
+<h6 class="zh imgDescription">△ 由网页实时生成的动态图像。</h6>
+
+<div class="grid3 gridxto2" style="grid-gap: 0;">
+  <img src="/img/gradient-arc/video1.gif" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
+  <img src="/img/gradient-arc/video3.gif" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
+  <img class="hideMobile" src="/img/gradient-arc/video2.gif" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
+</div>
+<h6 class="en imgDescription">△ Example of generated gifs.</h6>
+<h6 class="zh imgDescription">△ 生成的动图样例。</h6>
+
 <div class="grid5 gridxto3" style="grid-gap: 0;">
   <img src="/img/gradient-arc/s1.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
   <img src="/img/gradient-arc/s4.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
@@ -67,7 +84,10 @@
   <img src="/img/gradient-arc/s14.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
   <img class="hideMobile" src="/img/gradient-arc/s17.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
 </div>
+<h6 class="en imgDescription">△ Example of generated still images.</h6>
+<h6 class="zh imgDescription">△ 生成的静态图像样例。</h6>
 
+<!-- -------------------------------------------------------------------- -->
 <h2 class="en indent">Colour Cut</h2>
 <h2 class="zh indent">色彩切</h2>
 <p class="en indent bodyText">
@@ -76,6 +96,7 @@
 <p class="zh indent bodyText">
   请点击<a href="/page/colour-cut.html" target="_blank">此处</a>以跳转到该页面。
 </p>
+
 <div class="iframeWrapper iframe60 iframexto100">
   <iframe src="/page/colour-cut.html"></iframe>
 </div>
