--- a/work/mini-sites.html
+++ b/work/mini-sites.html
@@ -33,7 +33,7 @@
 </main>
 
 <!-- -------------------------------------------------------------------- -->
-<h2 class="en indent">Pattern Card</h2>
+<!-- <h2 class="en indent">Pattern Card</h2>
 <h2 class="zh indent">图纹卡片</h2>
 <p class="en indent bodyText">
   Please click <a href="/page/pattern-card.html" target="_blank">here</a> to visit to the site full-screen.
@@ -46,7 +46,7 @@
   <iframe src="/page/pattern-card.html"></iframe>
 </div>
 <h6 class="en imgDescription">△ Upon each refresh, the webpage fetches random new images on display.</h6>
-<h6 class="zh imgDescription">△ 该网页在每次刷新时会随机抽取并排列新的图纹图片。</h6>
+<h6 class="zh imgDescription">△ 该网页在每次刷新时会随机抽取并排列新的图纹图片。</h6> -->
 
 <!-- -------------------------------------------------------------------- -->
 <h2 class="en indent">Gradient Arc</h2>
