--- a/work/mini-sites.html
+++ b/work/mini-sites.html
@@ -21,7 +21,7 @@
   This page shows a compilation of genrative mini-sites.
 </p>
 <p class="zh indent headerText">
-  本页面展示汇编的生成式艺术迷你站点。
+  本页面展示汇编的生成式艺术小网页。
 </p>
 
 <h1 class="en">Mini-Sites</h1>
