--- a/work/mini-sites.html
+++ b/work/mini-sites.html
@@ -53,13 +53,26 @@
 <h2 class="zh indent">弧形渐变</h2>
 <p class="en indent bodyText">
   Please click <a href="/page/gradient-arc.html" target="_blank">here</a> to visit to the site full-screen.
+  <button id="iframeRefresher">Refresh Iframe</button>
 </p>
 <p class="zh indent bodyText">
   请点击<a href="/page/gradient-arc.html" target="_blank">此处</a>以跳转到该页面。
 </p>
 
+<script>
+  window.onload = function() {
+    document.getElementById('iframeRefresher').addEventListener('click', function() {
+        var ifr = document.getElementsByID('gradient-arc')[0];
+        ifr.src = ifr.src;
+    });
+  }
+</script>
+
+
+
+
 <div class="iframeWrapper iframe60 iframexto100">
-  <iframe src="/page/gradient-arc.html"></iframe>
+  <iframe id="gradient-arc" src="/page/gradient-arc.html"></iframe>
 </div>
 <h6 class="en imgDescription">△ Generative webpage (live).</h6>
 <h6 class="zh imgDescription">△ 由网页实时生成的动态图像。</h6>
