--- a/work/shuinfo.html
+++ b/work/shuinfo.html
@@ -28,7 +28,7 @@
 <h1 class="zh">述信</h1>
 
 <div class="grid1">
-  <img src="/img/shuinfo/logo.png" alt="SHUINFO LOGO · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/logo.gif" alt="SHUINFO LOGO · NORA ZHAO 赵子娴">
 </div>
 </main>
 
@@ -61,8 +61,10 @@
 </p>
 
 <div class="grid1">
-  <img src="/img/shuinfo/14.jpg" alt="SHUINFO · NORA ZHAO 赵子娴">
-  <img src="/img/shuinfo/13.jpg" alt="SHUINFO · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/1.jpg" alt="SHUINFO · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/0.jpg" alt="SHUINFO · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/2.jpg" alt="SHUINFO · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/5.jpg" alt="SHUINFO · NORA ZHAO 赵子娴">
 </div>
 
 <p class="en indent bodyText">
@@ -77,8 +79,6 @@
 </p>
 
 <div class="grid1">
-  <img src="/img/shuinfo/18.jpg" alt="SHUINFO · NORA ZHAO 赵子娴">
-  <img src="/img/shuinfo/17.jpg" alt="SHUINFO · NORA ZHAO 赵子娴">
   <img src="/img/shuinfo/7.jpg" alt="SHUINFO · NORA ZHAO 赵子娴">
   <img src="/img/shuinfo/9.jpg" alt="SHUINFO · NORA ZHAO 赵子娴">
   <img src="/img/shuinfo/11.jpg" alt="SHUINFO · NORA ZHAO 赵子娴">
