--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     "/page/colour-cut.html",
     "/page/colour-cut-float.html",
     "/page/edgy-sphere.html",    
-    "/page/planet-dora.html",
+    "/page/dora-line.html",
     "/page/ring-hug.html",
     "/page/ring.html",
     "/page/synsol-gradient.html",
