--- a/index.html
+++ b/index.html
@@ -41,12 +41,9 @@
 <script type="text/javascript">
   // list links here
   var myArray = [
-    "/page/colour-cut.html",
     "/page/colour-cut-float.html",
-    "/page/edgy-sphere.html",    
-    "/page/dora-line.html",
+    "/page/planet-dora-v2.html",
     "/page/ring-hug.html",
-    "/page/ring.html",
     "/page/synsol-gradient.html",
   ];
   var randomUrl = myArray[Math.floor(Math.random() * myArray.length)];
