--- a/work/chinese-grid.html
+++ b/work/chinese-grid.html
@@ -57,7 +57,7 @@
   <br class="listBreak">
   类型：独立项目
   <br class="dividerLine">
-  通常而言，产出一套中文字体的往往需要由设计师根据基本部件笔划进行对每个文字的手动拼写和调整。由于汉字字符数目巨大，这个过程通常要重复成千上万次，消耗巨大的人力成本。通过建立一个几何化的体系，本项目旨在探索和挑战传统的字体设计方法。
+  通常而言，制作一套中文字体需要由设计师根据基本笔划部件进行对每个文字的手动拼装和调整。然而由于汉字字符数目巨大，这个过程通要重复成千上万次，消耗巨大的人力和时间成本。通过建立一个几何网格组件化的系统，本项目旨在探索字体设计的新方法，使设计师甚至普通人能够根据自己的偏好自行组装所需要的字。
 </p>
 
 <img src="/img/chinese-grid/grid.png" alt="CHINESE GRID 中文字形网格 · NORA ZHAO 赵子娴">
