--- a/work/glitch-room.html
+++ b/work/glitch-room.html
@@ -67,9 +67,9 @@
   <br class="listBreak">
   类型：独立项目
   <br class="dividerLine">
-  故障房间是一个交互式网站，用户可以设计、访问和修改现有模型，并通过虚拟现实步入生成的空间以实现沉浸式视觉体验。
+  故障房间是一个交互式网站，使用者可以设计、访问和修改现有模型，并通过虚拟现实（VR）进入所生成的空间以实现沉浸式视觉体验。
   <br>
-  该项目在故障艺术这一领域进行了探索，以计算机代码为设计媒介，以深度缓冲噪音为方法，以闪烁的效果呈现每毫秒生成的独特图样。网站通过植入用户可调的控制面板实现模型自定义，通过三维渲染机制生成适应设备及屏幕尺寸的个性化图样输出，二者结合使该项目同时实现了自定义及个性化。
+  本项目探索了故障艺术这一领域。以计算机代码为设计媒介，深度缓冲噪音为方法，页面闪烁呈现着每毫秒实时生成的独特图纹。网站还嵌入了用户可调节的控制面板以实现几何模型自定义，并通过三维渲染机制生成适应设备及屏幕尺寸的个性化图纹，二者结合使该项目能同时实现自定义以及个性化。
   <br>
   网站链接：<a href="https://glitchroom.com" target="_blank">glitchroom.com</a>
 </p>
