--- a/work/chinese-grid.html
+++ b/work/chinese-grid.html
@@ -62,11 +62,13 @@
   通过建立一个几何网格组件化的系统，本项目旨在探索字体设计的新方法，使设计师甚至普通人能够根据自己的偏好自行组装和运用所需字符。
 </p>
 
-<img src="/img/chinese-grid/grid.png" alt="CHINESE GRID 中文字形网格 · NORA ZHAO 赵子娴">
+<img src="/img/chinese-grid/grid.gif" alt="CHINESE GRID 中文字形网格 · NORA ZHAO 赵子娴">
 <h6 class="en imgDescription">△ Each point and line has its corresponding part in the system, which allows the simultaneous generation of a character in two styles.</h6>
 <h6 class="zh imgDescription">△ 每个点和线段在系统中都有其对应的部分，在这种机制下可同时生成两种风格样式的字符。</h6>
 
 <div class="grid1">
+  <img src="/img/chinese-grid/5.jpg" alt="CHINESE GRID POSTER DESIGN 中文字形网格海报设计 · NORA ZHAO 赵子娴">
+  <img src="/img/chinese-grid/6.jpg" alt="CHINESE GRID POSTER DESIGN 中文字形网格海报设计 · NORA ZHAO 赵子娴">
   <img src="/img/chinese-grid/1.jpg" alt="CHINESE GRID POSTER DESIGN 中文字形网格海报设计 · NORA ZHAO 赵子娴">
 </div>
 <h6 class="en imgDescription">△ Posters which exhibit the design of the grid system by having the square and circular grids overlapped.</h6>
