--- a/work/glitch-room.html
+++ b/work/glitch-room.html
@@ -75,6 +75,14 @@
 </p>
 
 <div class="grid1">
+  <video autoplay loop
+    src="/img/glitch-room/video.mp4"
+    style="width: 100%;">
+    Your browser does not support the video tag.
+  </video>
+</div>
+
+<div class="grid1">
   <img src="/img/glitch-room/display.jpg" alt="GLITCH ROOM WEBSITE 故障房间网页 · NORA ZHAO 赵子娴">
   <img src="/img/glitch-room/iphone.jpg" alt="GLITCH ROOM WEBSITE 故障房间网页 · NORA ZHAO 赵子娴">
 </div>
