--- a/work/glitch-room.html
+++ b/work/glitch-room.html
@@ -81,12 +81,13 @@
     Your browser does not support the video tag.
   </video>
 </div>
+<h6 class="en imgDescription">△ Screenrecoding from glitchroom.com.</h6>
+<h6 class="zh imgDescription">△ 故障房间网站录屏视频。</h6>
 
 <div class="grid1">
   <img src="/img/glitch-room/display.jpg" alt="GLITCH ROOM WEBSITE 故障房间网页 · NORA ZHAO 赵子娴">
   <img src="/img/glitch-room/iphone.jpg" alt="GLITCH ROOM WEBSITE 故障房间网页 · NORA ZHAO 赵子娴">
 </div>
-
 <h6 class="en imgDescription">△ Home, model customisation and VR page from glitchroom.com.</h6>
 <h6 class="zh imgDescription">△ 故障房间网站首页、模型自定义及VR页面。</h6>
 
