update index source pages

--- a/index.html
+++ b/index.html
@@ -42,9 +42,13 @@
   // list links here
   var myArray = [
     "/page/colour-cut-float.html",
-    "/page/planet-dora-v2.html",
+    "/page/planet-dora.html",
+    "/page/planet-dora-alone.html",
     "/page/ring-hug.html",
     "/page/synsol-gradient.html",
+    "/page/pattern-card.html",
+    "/page/gradient-arc.html",
+    "/page/sound-sensor.html",
   ];
   var randomUrl = myArray[Math.floor(Math.random() * myArray.length)];
   document.getElementById('display').src = randomUrl;
