--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     "/page/pattern-card.html",
     "/page/gradient-arc.html",
     "/page/sound-sensor.html",
+    "/page/pixel.html",
   ];
   var randomUrl = myArray[Math.floor(Math.random() * myArray.length)];
   document.getElementById('display').src = randomUrl;
