--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     "/page/gradient-arc.html",
     "/page/sound-sensor.html",
     "/page/pixel.html",
+    "/page/led-light.html",
   ];
   var randomUrl = myArray[Math.floor(Math.random() * myArray.length)];
   document.getElementById('display').src = randomUrl;
