--- a/navigation.html
+++ b/navigation.html
@@ -182,8 +182,8 @@
     <p class="en"><a href="/work/omdia.html">- Omdia</a></p>
     <p class="zh"><a href="/work/omdia.html">- Omdia</a></p>
 
-    <p class="en"><a href="/work/lazzen.html">- Lazzen</a></p>
-    <p class="zh"><a href="/work/lazzen.html">- 良信智能</a></p>
+    <!-- <p class="en"><a href="/work/lazzen.html">- Lazzen</a></p>
+    <p class="zh"><a href="/work/lazzen.html">- 良信智能</a></p> -->
 
     <p class="en"><a href="/work/shuinfo.html">- SHUINFO</a></p>
     <p class="zh"><a href="/work/shuinfo.html">- 述信</a></p>
