--- a/work/byton.html
+++ b/work/byton.html
@@ -42,6 +42,10 @@
   Year: 2019
   <br class="listBreak">
   Type: team project
+  <br class="listBreak">
+  Copyright: Bru:d Creative
+  <br class="listBreak">
+  Work: poster layout design, brand guidelines
   <br class="dividerLine">
   Byton is a an all-electric automotive brand established in 2017 and co-founded by former BMW and Nissan Motor executives. Their ambition goes beyond basic mobility, and is to create the next-generation smart device on wheels to seamlessly connect customer's digital life and make their time on the move more enjoyable.
   <br>
@@ -53,11 +57,15 @@
   <br class="listBreak">
   地点：江苏南京
   <br class="listBreak">
-  范畴：视觉识别系统、品牌指导手册
+  项目范畴：视觉识别系统、品牌指导手册
   <br class="listBreak">
   时间：2019年
   <br class="listBreak">
   类型：团队项目
+  <br class="listBreak">
+  版权所有：BRU:D CREATIVE
+  <br class="listBreak">
+  工作内容：海报排版设计、品牌指导手册
   <br class="dividerLine">
   电动汽车品牌拜腾于2017年由前宝马和日产汽车高管共同创立。其愿景并非仅局限于汽车的基本运动性能方面，还在于创造能够无缝联结用户数字生活的智能设备，使人能够更好地享受旅途中的时光。
   <br>
