--- a/work/omdia.html
+++ b/work/omdia.html
@@ -41,7 +41,11 @@
   <br class="listBreak">
   Year: 2019-2020
   <br class="listBreak">
-  Type: collaborative project
+  Type: team project
+  <br class="listBreak">
+  Copyright: Bru:d Creative
+  <br class="listBreak">
+  Role: designer
   <br class="listBreak">
   Award: Gold at Transform Awards (London, 2021)
   <br class="dividerLine">
@@ -55,11 +59,15 @@
   <br class="listBreak">
   地点：英国伦敦
   <br class="listBreak">
-  范畴：消费者研究、品牌策略、命名、视觉识别系统、品牌指导手册
+  项目范畴：消费者研究、品牌策略、命名、视觉识别系统、品牌指导手册
   <br class="listBreak">
   时间：2019-2020年
   <br class="listBreak">
   类型：团队项目
+  <br class="listBreak">
+  版权所有：BRU:D CREATIVE
+  <br class="listBreak">
+  角色：设计师
   <br class="listBreak">
   奖项：Transform Awards 金奖 （伦敦, 2021年） 
   <br class="dividerLine">
@@ -93,14 +101,14 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="/work/lazzen.html">
+  <a href="/work/shuinfo.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/work/lazzen.html main");
+      $("#nextPage").load("/work/shuinfo.html main");
     });
   </script>
 </div>
