--- a/work/peacebird.html
+++ b/work/peacebird.html
@@ -42,6 +42,10 @@
   Year: 2019
   <br class="listBreak">
   Type: team project
+  <br class="listBreak">
+  Copyright: Bru:d Creative
+  <br class="listBreak">
+  Role: designer
   <br class="dividerLine">
   While maintaining the sans-serif approach and its unique visual characteristics, the new logotype maximises the simplicity of form to achive better legibility throughout applications of various sizes (especially on digital screens).
 </p>
@@ -50,11 +54,15 @@
   <br class="listBreak">
   地点：浙江宁波
   <br class="listBreak">
-  范畴：视觉识别系统、品牌指导手册
+  项目范畴：视觉识别系统、品牌指导手册
   <br class="listBreak">
   时间：2019年
   <br class="listBreak">
   类型：团队项目
+  <br class="listBreak">
+  版权所有：BRU:D CREATIVE
+  <br class="listBreak">
+  角色：设计师
   <br class="dividerLine">
   在维持衬线字体及其独特视觉特征的前提下，最大限度地简化太平鸟的企业标识，使其能在各种尺寸的应用物上清晰显示（尤其是电子设备屏幕）。
 </p>
