--- a/work/shuinfo.html
+++ b/work/shuinfo.html
@@ -42,6 +42,10 @@
   Year: 2021
   <br class="listBreak">
   Type: team project
+  <br class="listBreak">
+  Copyright: Bru:d Creative
+  <br class="listBreak">
+  Work: pattern generation, application layout design (partial), brand guidelines
   <br class="dividerLine">
   SHUINFO is a company which endeavours to deliver digital transformation services, products and solutions for business in the industries including food and beverages, retail, real estate, automobiles and finance.
 </p>
@@ -51,11 +55,15 @@
   <br class="listBreak">
   地点：上海
   <br class="listBreak">
-  范畴：品牌策略、视觉识别系统、品牌指导手册
+  项目范畴：品牌策略、视觉识别系统、品牌指导手册
   <br class="listBreak">
   时间：2021年
   <br class="listBreak">
   类型：团队项目
+  <br class="listBreak">
+  版权所有：BRU:D CREATIVE
+  <br class="listBreak">
+  工作内容：图纹生成、部分应用物排版设计、品牌指导手册
   <br class="dividerLine">
   上海述信信息科技有限公司致力于为实体企业的数字化转型及数字化业务开展提供服务、产品与解决方案，客户涵盖餐饮、零售快消、商业地产、汽车、金融等行业。
 </p>
