--- a/work/rtw.html
+++ b/work/rtw.html
@@ -42,6 +42,10 @@
   Year: 2019-2020
   <br class="listBreak">
   Type: team project
+  <br class="listBreak">
+  Copyright: Bru:d Creative
+  <br class="listBreak">
+  Role: designer
   <br class="dividerLine">
   RTW is an apperal brand which strives to deliver better quality products at an honest price, by considering what truely matters to the customers from materials and manufacturing to the sales channels.
   <br>
@@ -53,11 +57,15 @@
   <br class="listBreak">
   地点：上海
   <br class="listBreak">
-  范畴：品牌定位、视觉识别系统、品牌指导手册
+  项目范畴：品牌定位、视觉识别系统、品牌指导手册
   <br class="listBreak">
   时间：2019-2020年
   <br class="listBreak">
   类型：团队项目
+  <br class="listBreak">
+  版权所有：BRU:D CREATIVE
+  <br class="listBreak">
+  角色：设计师
   <br class="dividerLine">
   RTW这个服装品牌致力于以诚实、大众可负担的价格提供高品质的产品。鲜艳且丰富的色彩为品牌表达增添了差异性与活力，且可应用于各种类型的品牌表达中。
 </p>
