--- a/work/books-and-booklets.html
+++ b/work/books-and-booklets.html
@@ -53,7 +53,7 @@
   <br class="listBreak">
   时间：2019年
   <br class="listBreak">
-  类型：独立项目
+  类型：个人项目
   <br class="dividerLine">
   探讨含义与字形之间的联系，通过标记出词语中的封闭空间来探索其与人类情感的相关性。
 </p>
@@ -89,7 +89,7 @@
   <br class="listBreak">
   时间：2019年
   <br class="listBreak">
-  类型：独立项目
+  类型：个人项目
   <br class="dividerLine">
   将示例文本及其迭代的机器翻译进行横向比较，并用几种颜色突出显示的文本所传达信息间的差异，以可视化机器翻译带来的影响。
 </p>
@@ -124,7 +124,7 @@
   <br class="listBreak">
   时间：2020年
   <br class="listBreak">
-  类型：独立项目
+  类型：团队项目
   <br class="dividerLine">
   这是为一家数字化转型公司（Ascent）设计的电子刊物，作为其品牌识别的一部分。
   <br>
@@ -161,7 +161,7 @@
   <br class="listBreak">
   时间：2019年
   <br class="listBreak">
-  类型：独立项目
+  类型：个人项目
   <br class="dividerLine">
   演示图案制作技术如何用于生成字体设计，及相关的文字可识别性的问题。
   <br>
