--- a/work/chinese-grid.html
+++ b/work/chinese-grid.html
@@ -55,7 +55,7 @@
   <br class="listBreak">
   时间：2018年
   <br class="listBreak">
-  类型：独立项目
+  类型：个人项目
   <br class="dividerLine">
   通常而言，制作一套中文字体需要由设计师根据基本笔划部件进行对每个文字的手动拼装和调整。然而由于汉字字符数目巨大，这个过程通要重复成千上万次，消耗巨大的人力和时间成本。
   <br>
