--- a/work/design-practice.html
+++ b/work/design-practice.html
@@ -51,7 +51,7 @@
   <br class="listBreak">
   时间：2018年
   <br class="listBreak">
-  类型：独立项目
+  类型：个人项目
   <br class="dividerLine">
   该书的内容取材于四位设计师（David Bennett、Rebecca May、Peter Chadwick、Kate McLean）的演讲分享。他们的作品来自专业领域或学术领域。
 </p>
