--- a/work/glitch-room.html
+++ b/work/glitch-room.html
@@ -65,7 +65,7 @@
   <br class="listBreak">
   时间：2019年
   <br class="listBreak">
-  类型：独立项目
+  类型：个人项目
   <br class="dividerLine">
   故障房间是一个交互式网站，使用者可以设计、访问和修改现有模型，并通过虚拟现实（VR）进入所生成的空间以实现沉浸式视觉体验。
   <br>
