--- a/work/peacebird.html
+++ b/work/peacebird.html
@@ -54,7 +54,7 @@
   <br class="listBreak">
   地点：浙江宁波
   <br class="listBreak">
-  项目范畴：视觉识别系统、品牌指导手册
+  范畴：视觉识别系统、品牌指导手册
   <br class="listBreak">
   时间：2019年
   <br class="listBreak">
