--- a/work/posters-and-leaflets.html
+++ b/work/posters-and-leaflets.html
@@ -58,7 +58,7 @@
   <br class="listBreak">
   时间：2017年
   <br class="listBreak">
-  类型：独立项目
+  类型：个人项目
   <br class="dividerLine">
   这组海报旨为伦敦的Kemistry画廊推广有关视觉语言和语法的虚构展览。
   <br>
