--- a/work/shuinfo.html
+++ b/work/shuinfo.html
@@ -55,7 +55,7 @@
   <br class="listBreak">
   地点：上海
   <br class="listBreak">
-  项目范畴：品牌策略、视觉识别系统、品牌指导手册
+  范畴：品牌策略、视觉识别系统、品牌指导手册
   <br class="listBreak">
   时间：2021年
   <br class="listBreak">
