--- a/work/visual-weather.html
+++ b/work/visual-weather.html
@@ -59,7 +59,7 @@
   <br class="listBreak">
   时间：2019年
   <br class="listBreak">
-  类型：独立项目
+  类型：个人项目
   <br class="dividerLine">
   该模型通过获取指定城市的实时天气数据将其转换为视觉效果。这个实验志在通过视觉表现直观地诠释天气信息，将其他感官联系起来。
   <br>
