--- a/work/byton.html
+++ b/work/byton.html
@@ -57,7 +57,7 @@
   <br class="listBreak">
   地点：江苏南京
   <br class="listBreak">
-  项目范畴：视觉识别系统、品牌指导手册
+  范畴：视觉识别系统、品牌指导手册
   <br class="listBreak">
   时间：2019年
   <br class="listBreak">
