--- a/work/glitch-pattern.html
+++ b/work/glitch-pattern.html
@@ -57,7 +57,7 @@
   <br class="listBreak">
   时间：2019年
   <br class="listBreak">
-  类型：独立项目
+  类型：个人项目
   <br class="dividerLine">
   深度冲突（z-fighting）是3D渲染中因两个或多个平面具有一致或极为接近的位置时产生的。在这种情形下，不同的平面相互竞争以显示在屏幕像素上，最终产生一种闪烁的栅格化效果。
 </p>
