--- a/work/omdia.html
+++ b/work/omdia.html
@@ -59,7 +59,7 @@
   <br class="listBreak">
   地点：英国伦敦
   <br class="listBreak">
-  项目范畴：消费者研究、品牌策略、命名、视觉识别系统、品牌指导手册
+  范畴：消费者研究、品牌策略、命名、视觉识别系统、品牌指导手册
   <br class="listBreak">
   时间：2019-2020年
   <br class="listBreak">
