--- a/work/rtw.html
+++ b/work/rtw.html
@@ -57,7 +57,7 @@
   <br class="listBreak">
   地点：上海
   <br class="listBreak">
-  项目范畴：品牌定位、视觉识别系统、品牌指导手册
+  范畴：品牌定位、视觉识别系统、品牌指导手册
   <br class="listBreak">
   时间：2019-2020年
   <br class="listBreak">
