--- a/work/byton.html
+++ b/work/byton.html
@@ -45,7 +45,7 @@
   <br class="listBreak">
   Copyright: Bru:d Creative
   <br class="listBreak">
-  Work: poster layout design, brand guidelines
+  Role: poster design, brand guidelines
   <br class="dividerLine">
   Byton is a an all-electric automotive brand established in 2017 and co-founded by former BMW and Nissan Motor executives. Their ambition goes beyond basic mobility, and is to create the next-generation smart device on wheels to seamlessly connect customer's digital life and make their time on the move more enjoyable.
   <br>
