--- a/work/shuinfo.html
+++ b/work/shuinfo.html
@@ -45,7 +45,7 @@
   <br class="listBreak">
   Copyright: Bru:d Creative
   <br class="listBreak">
-  Work: pattern generation, application layout design (partial), brand guidelines
+  Role: pattern generation, application layout design (partial), brand guidelines
   <br class="dividerLine">
   SHUINFO is a company which endeavours to deliver digital transformation services, products and solutions for business in the industries including food and beverages, retail, real estate, automobiles and finance.
 </p>
