--- a/navigation.html
+++ b/navigation.html
@@ -191,8 +191,8 @@
     <p class="en"><a href="/work/peacebird.html">- Peacebird</a></p>
     <p class="zh"><a href="/work/peacebird.html">- 太平鸟</a></p>
 
-    <p class="en"><a href="/work/byton.html">- Byton</a></p>
-    <p class="zh"><a href="/work/byton.html">- 拜腾</a></p>
+    <!-- <p class="en"><a href="/work/byton.html">- Byton</a></p>
+    <p class="zh"><a href="/work/byton.html">- 拜腾</a></p> -->
     <br>
 
     <p class="en type">Graphic Design:</p>
