--- a/work/peacebird.html
+++ b/work/peacebird.html
@@ -78,18 +78,17 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="/work/byton.html">
+  <a href="/work/chinese-grid.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/work/byton.html main");
+      $("#nextPage").load("/work/chinese-grid.html main");
     });
   </script>
 </div>
-
 <div id="footer"></div>
 <script type="text/javascript">
   $(function() {
