--- a/work/glitch-room.html
+++ b/work/glitch-room.html
@@ -43,7 +43,7 @@
   <br class="listBreak">
   Language and Library: HTML, CSS, JavaScript, A-Frame
   <br class="listBreak">
-  Year: 2019
+  Year: 2019-2020
   <br class="listBreak">
   Type: independent project
   <br class="dividerLine">
@@ -63,7 +63,7 @@
   <br class="listBreak">
   编程语言与函数库：HTML、CSS、JavaScript、A-Frame
   <br class="listBreak">
-  时间：2019年
+  时间：2019-2020年
   <br class="listBreak">
   类型：个人项目
   <br class="dividerLine">
