--- a/work/glitch-room.html
+++ b/work/glitch-room.html
@@ -75,7 +75,7 @@
 </p>
 
 <div class="grid1">
-  <video autoplay loop controls
+  <video autoplay loop controls playsinline
     src="/img/glitch-room/video.mp4"
     style="width: 100%;">
     Your browser does not support the video tag.
