--- a/work/glitch-room.html
+++ b/work/glitch-room.html
@@ -46,6 +46,8 @@
   Year: 2019-2020
   <br class="listBreak">
   Type: independent project
+  <br class="listBreak">
+  Award: Award 360° - 100 Design of the Year (Creative Multimedia Design of the Year, 2021)
   <br class="dividerLine">
   Glitch Room is an interactive website where users can design a 3D model and view it through VR, or visit and redesign existing models.
   <br>
@@ -66,6 +68,8 @@
   时间：2019-2020年
   <br class="listBreak">
   类型：个人项目
+  <br class="listBreak">
+  奖项：Award360°年度设计100（年度多媒体创意设计｜2021年） 
   <br class="dividerLine">
   故障房间是一个交互式网站，使用者可以设计、访问和修改现有模型，并通过虚拟现实（VR）进入所生成的空间以实现沉浸式视觉体验。
   <br>
