--- a/work/omdia.html
+++ b/work/omdia.html
@@ -69,7 +69,7 @@
   <br class="listBreak">
   角色：设计师
   <br class="listBreak">
-  奖项：Transform Awards 金奖 （伦敦, 2021年） 
+  奖项：Transform Awards 金奖 （伦敦｜2021年） 
   <br class="dividerLine">
   Omdia由Informa Tech旗下的市场分析公司Ovum、Heavy Reading、TracticaA与收购的IHS Markit合并而成。它拥有逾400名一流的分析师和咨询师，覆盖150个市场，每年收集3.95亿个数据点，出版3000多部研究报告。具备这样的研究广度和深度，通过“连接关键点”，Omdia能够有效地为整个科技生态圈的客户提供全方位研究和分析服务。
 </p>
