--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -33,7 +33,7 @@
 </main>
 
 <p class="en indent bodyText">
-  I'm Nora, an artist and designer. This website shows a selection of my past projects. My practice can be found across the areas of generative art, brand identity and conventional graphic design. I'm interested in the matter of image generation through creative coding.
+  Hello! I'm Nora, an artist and designer. This website shows a selection of my past projects. My practice can be found across the areas of generative art, brand identity and conventional graphic design. I'm interested in the matter of image generation through creative coding.
   <br>
   I have a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Design for Visual Communications (merit, 2018) and a master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
   <br>
@@ -47,11 +47,13 @@
 </p>
 
 <p class="zh indent bodyText">
-  我是赵子娴（Nora），一名艺术家/设计师。网站选取并展示了我过去完成的一些设计项目。我主要进行探索和实践的领域包括生成艺术（generative art）、品牌识别（brand identity）以及平面设计（graphic design），其中我对如何用创意编程的方法批量生成随机图形很感兴趣。
+  你好！我是赵子娴（Nora），一名艺术家｜设计师。
+  <br>
+  网站上选取并展示了我过去完成的一些项目，涉及领域包括生成艺术（generative art）、品牌识别（brand identity）以及平面设计（graphic design）。
   <br>
   我持有中国传媒大学的工商管理本科学位（2016）、伦敦艺术大学传媒学院的视觉传达设计研究生文凭（优秀，2018）和平面媒体设计硕士学位（优秀，2020）。
   <br>
-  我目前可以接手远程的艺术与设计项目，如您需要雇佣自由职业设计师或有项目合作需求，亦或是感兴趣想聊聊天，请通过微信或邮件联系我。
+  我目前可以接手远程项目，如您需要雇佣自由职业设计师或有项目合作需求，请通过微信或邮件联系我。
   <br>
   微信账号：norazhaodesign
   <br style="margin-bottom: 0;">
