--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -21,7 +21,7 @@
   For comission or collaboration, please don't hesitate to contact me.
 </p>
 <p class="zh indent headerText">
-  如果您在寻找设计师，或有项目合作需求，可通过微信或电子邮箱联系我。
+  如果您在寻找设计师或有项目合作需求，可通过微信或电子邮箱联系我。
 </p>
 
 <h1 class="en">About and Contact</h1>
@@ -47,13 +47,11 @@
 </p>
 
 <p class="zh indent bodyText">
-  你好！我是赵子娴（Nora），一名艺术家｜设计师。
+  HELLO！我叫赵子娴（Nora），是一名艺术家 / 设计师。网站上选取并展示了我过去完成的部分项目，涉及领域包括生成艺术（generative art）、品牌识别（brand identity）以及平面设计（graphic design）。
   <br>
-  网站上选取并展示了我过去完成的一些项目，涉及领域包括生成艺术（generative art）、品牌识别（brand identity）以及平面设计（graphic design）。
+  我持有中国传媒大学的工商管理本科学位（2016）、伦敦艺术大学（UAL）传媒学院的视觉传达设计研究生文凭（优秀，2018）和平面媒体设计硕士学位（优秀，2020）。
   <br>
-  我持有中国传媒大学的工商管理本科学位（2016）、伦敦艺术大学传媒学院的视觉传达设计研究生文凭（优秀，2018）和平面媒体设计硕士学位（优秀，2020）。
-  <br>
-  我目前可以接手远程项目，如您需要雇佣自由职业设计师或有项目合作需求，请通过微信或邮件联系我。
+  我目前可以进行远程项目，如您需要雇佣自由职业设计师或有项目合作需求，请通过微信或邮件联系我。
   <br>
   微信账号：norazhaodesign
   <br style="margin-bottom: 0;">
