--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
 <script type="text/javascript">
   // list links here
   var myArray = [
+    "/page/pattern-cards.html", "/page/pattern-cards.html",
     "/page/colour-cut-float.html",
-    "/page/planet-dora.html",
-    "/page/planet-dora-alone.html",
-    "/page/ring-hug.html",
+    // "/page/planet-dora.html",
+    "/page/soft-gradient.html",
+    // "/page/ring-hug.html",
     "/page/synsol-gradient.html",
-    "/page/pattern-card.html",
     "/page/gradient-arc.html",
     "/page/sound-sensor.html",
-    "/page/pixel.html",
-    "/page/led-light.html",
+    "/page/pixels.html",
+    // "/page/led-light.html",
   ];
   var randomUrl = myArray[Math.floor(Math.random() * myArray.length)];
   document.getElementById('display').src = randomUrl;
