--- a/work/angel-water.html
+++ b/work/angel-water.html
@@ -18,17 +18,17 @@
 
 <main>
 <p class="en indent headerText">
-  A refreshed brand identity sysytem for a leading water purification brand in China.
+  A refreshed brand identity sysytem for a leading water purifier brand in China.
 <p>
 <p class="zh indent headerText">
-  高端净水品牌安吉尔的视觉识别系统更新。
+  高端净水品牌安吉尔的品牌识别系统更新。
 <p>
 
 <h1 class="en">Angel Water</h1>
 <h1 class="zh">安吉尔</h1>
 
 <div class="grid1">
-  <img src="/img/angel/cover.jpg" alt="ANGEL LOGO 安吉尔品牌标识 · NORA ZHAO 赵子娴">
+  <img src="/img/angel/angel-13.jpg" alt="ANGEL 安吉尔 · NORA ZHAO 赵子娴">
 </div>
 </main>
 
@@ -37,34 +37,50 @@
   <br class="listBreak">
   Location: Shenzhen, Guangdong, China
   <br class="listBreak">
-  Scope: visual audit and analysis, brand identity system
+  Scope: brand identity system upgrade
   <br class="listBreak">
-  Year: 2020
+  Year: 2021
   <br class="listBreak">
-  Type: collaborative project
+  Type: team project
+  <br class="listBreak">
+  Copyright: Bru:d Creative, Landor (Shanghai)
+  <br class="listBreak">
+  Role: designer
   <br class="dividerLine">
-  While maintaining the sans-serif approach and its unique visual characteristics, the new logotype maximises the simplicity of form to achive better legibility throughout applications of various sizes (especially on digital screens).
+  With over 30 years of development, ANGEL has established a leading position in the water purifier market in terms of sales in China. In order to consolidate and strengthen its brand leadership in the domestic market, ANGEL hopes to upgrade its current brand identity system.
 </p>
 <p class="zh indent bodyText">
   客户：安吉尔
   <br class="listBreak">
   地点：广东深圳
   <br class="listBreak">
-  范畴：视觉审查与分析、品牌识别系统
+  范畴：品牌识别系统更新
   <br class="listBreak">
-  时间：2020年
+  时间：2021年
   <br class="listBreak">
   类型：团队项目
+  <br class="listBreak">
+  版权所有：BRU:D CREATIVE、 郎涛
+  <br class="listBreak">
+  角色：设计师
   <br class="dividerLine">
-  在维持衬线字体及其独特视觉特征的前提下，最大限度地简化太平鸟的企业标识，使其能在各种尺寸的应用物上清晰显示（尤其是电子设备屏幕）。
+  经过33年的业务发展，安吉尔品牌已经建立了全国销量领先的行业龙头地位。
+  <br>
+  为了能够吸引更大基数的国内消费者，加强在更多元化的品牌触点的露出，安吉尔希望能够在现有的品牌资产基础上升级一套视觉识别系统，巩固和加强其在国内市场的品牌领导力。
 </p>
 
 <div class="grid1">
-  <img src="/img/peacebird/tmall.jpg" alt="PEACEBIRD MOBILE TMALL DESIGN 太平鸟天猫界面 · NORA ZHAO 赵子娴">
-  <img src="/img/peacebird/4.jpg" alt="PEACEBIRD POSTERS 太平鸟海报 · NORA ZHAO 赵子娴">
-  <img src="/img/peacebird/3.jpg" alt="PEACEBIRD POSTERS 太平鸟海报 · NORA ZHAO 赵子娴">
-  <img src="/img/peacebird/1.jpg" alt="PEACEBIRD POSTERS 太平鸟海报 · NORA ZHAO 赵子娴">
-  <img src="/img/peacebird/2.jpg" alt="PEACEBIRD POSTERS 太平鸟海报 · NORA ZHAO 赵子娴">
+  <img src="/img/angel/angel-1.jpg" alt="ANGEL 安吉尔 · NORA ZHAO 赵子娴">
+  <img src="/img/angel/angel-11.jpg" alt="ANGEL 安吉尔 · NORA ZHAO 赵子娴">
+  <img src="/img/angel/angel-12.jpg" alt="ANGEL 安吉尔 · NORA ZHAO 赵子娴">
+  <img src="/img/angel/angel-5.jpg" alt="ANGEL 安吉尔 · NORA ZHAO 赵子娴">
+  <img src="/img/angel/board-03.jpg" alt="ANGEL 安吉尔 · NORA ZHAO 赵子娴">
+  <img src="/img/angel/board-04.jpg" alt="ANGEL 安吉尔 · NORA ZHAO 赵子娴">
+  <img src="/img/angel/board-05.jpg" alt="ANGEL 安吉尔 · NORA ZHAO 赵子娴">
+  <img src="/img/angel/board-06.jpg" alt="ANGEL 安吉尔 · NORA ZHAO 赵子娴">
+  <img src="/img/angel/board-07.jpg" alt="ANGEL 安吉尔 · NORA ZHAO 赵子娴">
+  <img src="/img/angel/board-08.jpg" alt="ANGEL 安吉尔 · NORA ZHAO 赵子娴">
+  <img src="/img/angel/board-09.jpg" alt="ANGEL 安吉尔 · NORA ZHAO 赵子娴">
 </div>
 
 <div class="pageDivider"></div>
