--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -37,7 +37,7 @@
   <br>
   I have a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Design for Visual Communications (merit, 2018) and a master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
   <br>
-  If you are interested, please send me an email of inquiry about any possible commission or collaboration.
+  Full portfolio available upon request. If you are interested, please send me an email of inquiry about any possible commission or collaboration.
   <br>
   Email: hi@norazhao.com
   <br style="margin-bottom: 0;">
@@ -47,11 +47,11 @@
 </p>
 
 <p class="zh indent bodyText">
-  HELLO！我叫赵子娴（Nora），是一名艺术家 / 设计师。网站上选取并展示了我过去完成的部分项目，涉及领域包括生成艺术（generative art）、品牌识别（brand identity）以及平面设计（graphic design）。
+  Hello！我叫赵子娴（Nora），是一名艺术家 / 设计师。网站上选取并展示了我过去完成的部分项目，涉及领域包括生成艺术（generative art）、品牌识别（brand identity）以及平面设计（graphic design）。
   <br>
   我持有中国传媒大学的工商管理本科学位（2016）、伦敦艺术大学（UAL）传媒学院的视觉传达设计研究生文凭（优秀，2018）和平面媒体设计硕士学位（优秀，2020）。
   <br>
-  我目前可以进行远程项目，如您需要雇佣自由职业设计师或有项目合作需求，请通过微信或邮件联系我。
+  请联系我以获取完整作品集和相关资料。我目前可以进行远程项目，如您需要雇佣自由职业设计师或有项目合作需求，请通过微信或邮件联系我。
   <br>
   微信账号：norazhaodesign
   <br style="margin-bottom: 0;">
