--- a/work/angel-water.html
+++ b/work/angel-water.html
@@ -70,7 +70,7 @@
 </p>
 
 <div class="grid1">
-  <img src="/img/angel/angel-1.jpg" alt="ANGEL 安吉尔 · NORA ZHAO 赵子娴">
+  <img src="/img/angel/board-02.jpg" alt="ANGEL 安吉尔 · NORA ZHAO 赵子娴">
   <img src="/img/angel/angel-11.jpg" alt="ANGEL 安吉尔 · NORA ZHAO 赵子娴">
   <img src="/img/angel/angel-12.jpg" alt="ANGEL 安吉尔 · NORA ZHAO 赵子娴">
   <img src="/img/angel/angel-5.jpg" alt="ANGEL 安吉尔 · NORA ZHAO 赵子娴">
@@ -86,14 +86,14 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="/work/byton.html">
+  <a href="/work/lazzen.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/work/byton.html main");
+      $("#nextPage").load("/work/lazzen.html main");
     });
   </script>
 </div>
