--- a/work/byton.html
+++ b/work/byton.html
@@ -89,14 +89,14 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="/work/chinese-grid.html"> <!-- change link -->
+  <a href="/work/angel-water.html"> <!-- change link -->
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/work/chinese-grid.html main"); // change link
+      $("#nextPage").load("/work/angel-water.html main"); // change link
     });
   </script>
 </div>
