--- a/work/glitch-pattern.html
+++ b/work/glitch-pattern.html
@@ -73,7 +73,12 @@
 <h6 class="en imgDescription">△ Generated images from visual experiment "Glitched Layers".</h6>
 <h6 class="zh imgDescription">△ “故障涂层”视觉实验所生成的图片。</h6>
 
-<div class="grid3">
+<div class="grid3 gridOutlineWhite" style="grid-gap: 0;">
+  <style>
+    .gridOutlineWhite > img {
+      outline: solid 1px white;
+    }
+  </style>
   <img src="/img/glitch-pattern/3-1.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
   <img src="/img/glitch-pattern/3-2.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
   <img src="/img/glitch-pattern/3-3.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
