--- a/work/lazzen.html
+++ b/work/lazzen.html
@@ -91,14 +91,14 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="/work/shuinfo.html">
+  <a href="/work/byton.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/work/shuinfo.html main");
+      $("#nextPage").load("/work/byton.html main");
     });
   </script>
 </div>
