--- a/work/mini-sites.html
+++ b/work/mini-sites.html
@@ -47,20 +47,20 @@
 </div>
 
 <!-- -------------------------------------------------------------------- -->
-<!-- <h2 class="en indent">Pattern Card</h2>
+<h2 class="en indent">Pattern Card</h2>
 <h2 class="zh indent">图纹卡片</h2>
 <p class="en indent bodyText">
-  Please click <a href="/page/pattern-card.html" target="_blank">here</a> to visit to the site full-screen.
+  Please click <a href="/page/pattern-cards.html" target="_blank">here</a> to visit to the site full-screen.
 </p>
 <p class="zh indent bodyText">
-  请点击<a href="/page/pattern-card.html" target="_blank">此处</a>以跳转到该页面。
+  请点击<a href="/page/pattern-cards.html" target="_blank">此处</a>以跳转到该页面。
 </p>
 
 <div class="iframeWrapper iframe60 iframexto100">
-  <iframe src="/page/pattern-card.html"></iframe>
+  <iframe src="/page/pattern-cards.html"></iframe>
 </div>
 <h6 class="en imgDescription">△ Upon each refresh, the webpage fetches random new images on display.</h6>
-<h6 class="zh imgDescription">△ 该网页在每次刷新时会随机抽取并排列新的图纹图片。</h6> -->
+<h6 class="zh imgDescription">△ 该网页在每次刷新时会随机抽取并排列新的图纹图片。</h6>
 
 <!-- -------------------------------------------------------------------- -->
 <h2 class="en indent">Gradient Arc</h2>
@@ -78,25 +78,18 @@
 <h6 class="en imgDescription">△ Generative webpage (live).</h6>
 <h6 class="zh imgDescription">△ 由网页实时生成的动态图像。</h6>
 
-<div class="grid3 gridxto2" style="grid-gap: 0;">
+<div class="grid1">
   <img src="/img/gradient-arc/video1.gif" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
   <img src="/img/gradient-arc/video3.gif" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
-  <img class="hideMobile" src="/img/gradient-arc/video2.gif" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
+  <img src="/img/gradient-arc/video2.gif" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
 </div>
 <h6 class="en imgDescription">△ Example of generated gifs.</h6>
 <h6 class="zh imgDescription">△ 生成的动图样例。</h6>
 
-<div class="grid5 gridxto3" style="grid-gap: 0;">
-  <img src="/img/gradient-arc/s1.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
-  <img src="/img/gradient-arc/s4.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
-  <img src="/img/gradient-arc/s6.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
+<div class="grid1">
   <img src="/img/gradient-arc/s7.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
   <img src="/img/gradient-arc/s9.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
-  <img src="/img/gradient-arc/s10.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
   <img src="/img/gradient-arc/s11.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
-  <img src="/img/gradient-arc/s13.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
-  <img src="/img/gradient-arc/s14.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
-  <img class="hideMobile" src="/img/gradient-arc/s17.png" alt="GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴">
 </div>
 <h6 class="en imgDescription">△ Example of generated still images.</h6>
 <h6 class="zh imgDescription">△ 生成的静态图像样例。</h6>
