--- a/work/nabian.html
+++ b/work/nabian.html
@@ -21,7 +21,7 @@
   A fresh new visual identity system built for a socks company.
 <p>
 <p class="zh indent headerText">
-  新创袜类品牌的视觉识别系统。
+  袜类品牌“那边”的全新视觉识别系统。
 <p>
 
 <h1 class="en">Nabian</h1>
@@ -46,6 +46,10 @@
   Copyright: Nora Zhao, Xueying Brand Management
   <br class="listBreak">
   Role: designer
+  <br class="dividerLine">
+  The wonderful life is not linear, it is composed of countless beautiful moments in specific time and space.
+  <br>
+  "Nabian (translation: there)" is a word full of temporal and spatial feelings, in "Nabian", there, at that time, that kind of beautiful thing happened, which constitutes a complete story about a wonderful life. Imagine, with Shanghai as the origin, unfold the imaginative time and space. "Nabian" opens a coordinate axis, which can locate every beautiful moment. Together, they tell a complete story.
 </p>
 <p class="zh indent bodyText">
   客户：那边
@@ -60,7 +64,11 @@
   <br class="listBreak">
   版权所有：Nora Zhao、雪颖（上海）品牌管理有限公司
   <br class="listBreak">
-  角色：设计师
+  角色：设计师  
+  <br class="dividerLine">
+  美好生活不是线性的，它是由无数个具体时空的美好瞬间所组成的。
+  <br>
+  “那边”是一个充满时空感受的词，在“那边”，那里，那时，发生了那样的美好，这构成了有关美好生活的完整故事。想象一下，以上海为原点，unfold充满想象力的时空，“那边”张开了一个坐标轴，可以定位点点滴滴的美好瞬间，让每一个美好瞬间都能够述说完整的故事。
 </p>
 
 <div class="grid1">
