--- a/work/lazzen.html
+++ b/work/lazzen.html
@@ -42,6 +42,10 @@
   Year: 2021
   <br class="listBreak">
   Type: team project
+  <br class="listBreak">
+  Copyright: Bru:d Creative
+  <br class="listBreak">
+  Role: designer
   <br class="dividerLine">
    A fantastical world created for Lazzen's customers. One where the seemingly impossible becomes possible. One that speaks of the aspiration of the product rather than the function. One that puts Lazzen ‘life magic’ firmly in the lifestyle sector and sets it apart from the competition.
   <br>
@@ -57,6 +61,10 @@
   时间：2021年
   <br class="listBreak">
   类型：团队项目
+  <br class="listBreak">
+  版权所有：BRU:D CREATIVE
+  <br class="listBreak">
+  角色：设计师
   <br class="dividerLine">
   我们为良信的客户创造出一个奇幻的魔法世界。
   <br>
